static/css/main.css
/* --- General --- */

body {
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 18px;
  color: #404040;
  font-weight: 100;
  position: relative;
  background: #FFFFFF;
  display: flex;
  flex-flow: column;
  height: 100vh;
  padding-top: 50px /*prevent navbar overlaying body text for most screenwidths (BK) */
  
}
@media (prefers-color-scheme: dark) {
  body {
    background: black;
    color: white;
  }
}

.well {
    background-color: #e8e6e4;
    text-align: left;
}

.container[role=main] {
  margin-bottom:50px;
  flex: 1 0 auto;
}

@media only screen and (max-width: 767px) {
.container[role=main] {
    margin-left: 0;
    margin-right: 0;
}
}

p {
  line-height: 1.5;
  margin: 6px 0;
}
p + p {
    margin: 24px 0 6px 0;
}
p a {
  /* text-decoration: underline */
  color: #9792c1;
}
@media (prefers-color-scheme: dark) {
  p a {
    color: #9792c1;
  }
}

h1,h2,h3,h4,h5,h6 {
  font-family:  'Roboto', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 500;
  color: #494066;
  text-align: left;
  text-transform: uppercase;
}

a {
  color: #9792c1;
}
@media (prefers-color-scheme: dark) {
  a {
    color: #9792c1;
  }
}
a:hover,
a:focus {
  color: #0085a1;
}
blockquote {
  color: #808080;
  font-style: italic;
}
blockquote p:first-child {
  margin-top: 0;
}
@media (prefers-color-scheme: dark) {
  blockquote {
    border-left: 5px solid #444;
  }
}
hr.small {
  max-width: 100px;
  border-width: 4px;
  border-color: #FECF65;
  border-radius: 3px;
  margin: 15px auto 15px 0;
}

.main-content {
  padding-top: 80px;
}
@media only screen and (min-width: 768px) {
  .main-content {
    padding-top: 130px;
  }
}

.main-explain-area {
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  padding: 15px inherit;
}

.hideme {
  display: none;
}

div.panel-body a.list-group-item {
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 700;
  border-radius: 0;
  border: none;
  font-size: 16px;
}
div.panel-group .panel {
    border-radius: 0;
}
div.panel-group .panel+.panel {
    margin-top: 0;
}

div.panel-body a.list-group-item.view-all {
  font-weight: 700;
}

::-moz-selection, ::selection {
  color: white;
  text-shadow: none;
  background: #0085a1;
}
img::selection, img::-moz-selection {
  color: white;
  background: transparent;
}


img {
  display: block;
  margin: auto;
  max-width: 100%;
}
@media (prefers-color-scheme: dark) {
figure:not(.dark) img, img.white {
  background-color: white;
}
}

.img-title {
  width: 100%;
}

.disqus-comments {
  margin-top: 30px;
}

@media only screen and (min-width: 768px) {
  .disqus-comments {
    margin-top: 40px;
  }
}

/* --- Navbar --- */

.navbar-custom {
  background: #fecf65;
  border-bottom: 1px solid #EAEAEA;
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
@media (prefers-color-scheme: dark) {
  .navbar-custom {
    background: #505050;
    border-bottom: 1px solid #AAA;
  }
}

.navbar-custom .nav li a {
  text-transform: uppercase;
  font-size: 12px;
  letter-spacing: 1px;
}

.navbar-custom .navbar-brand,
.navbar-custom .nav li a {
  font-weight: 700;
  color: #404040;
  text-transform: uppercase;
  font-size: 12px;
}

@media (prefers-color-scheme: dark) {
  .navbar-custom .navbar-brand,
  .navbar-custom .nav li a {
    color: #b0b0b0;
  }
}

.navbar-custom .navbar-brand:hover,
.navbar-custom .navbar-brand:focus ,
.navbar-custom .nav li a:hover,
.navbar-custom .nav li a:focus {
  color: white;
}

.navbar-custom .navbar-brand:hover,
.navbar-custom .navbar-brand:focus ,
.navbar-custom .nav li a:hover,
.navbar-custom .nav li a:focus {
  @media (prefers-color-scheme: dark) {
    color: #b0e0ff;
  }
}

.navbar-custom .navbar-brand-logo {
  padding-top: 0;
  -webkit-transition: padding .5s ease-in-out;
  -moz-transition: padding .5s ease-in-out;
  transition: padding .5s ease-in-out;
}
.navbar-custom .navbar-brand-logo img {
  height: 50px;
  -webkit-transition: height .5s ease-in-out;
  -moz-transition: height .5s ease-in-out;
  transition: height .5s ease-in-out;
}
.navbar-custom.top-nav-short .navbar-brand-logo {
  padding-top: 5px;
}
.navbar-custom.top-nav-short .navbar-brand-logo img {
  height: 40px;
}

@media only screen and (min-width: 768px) {
  .navbar-custom {
    padding: 10px 0;
    -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
    -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
    transition: background .5s ease-in-out,padding .5s ease-in-out;
  }

  .navbar-custom.top-nav-short {
    padding: 0;
  }
}

.navbar-custom .avatar-container {
  opacity: 1;
  visibility: visible;
  position: absolute;
  -webkit-transition: visibility 0.5s, opacity 0.5s ease-in-out;
  -moz-transition: visibility 0.5s, opacity 0.5s ease-in-out;
  transition: visibility 0.5s, opacity 0.5s ease-in-out;
  left: 50%;
  width: 50px;
  margin-top: -25px;
}
.navbar-custom .avatar-container  .avatar-img-border {
  width: 100%;
  border-radius: 50%;
  margin-left: -50%;
  display: inline-block;
  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
}
.navbar-custom .avatar-container  .avatar-img {
  width: 100%;
  border-radius: 50%;
  display: block;
}

.navbar-custom.top-nav-short .avatar-container{
  opacity: 0;
  visibility: hidden;
}

.navbar-custom.top-nav-expanded .avatar-container  {
  display: none;
}

@media only screen and (min-width: 768px) {
  .navbar-custom .avatar-container {
    width: 100px;
    margin-top: -50px;
  }

  .navbar-custom .avatar-container  .avatar-img-border {
    width: 100%;
    box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
    -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
    -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
  }

  .navbar-custom .avatar-container  .avatar-img {
    width: 100%;
  }
}
/* ... */

